# verifiers-tooluse

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.devcontainer/: devcontainer.json
configs/: zero3.yaml
notebooks/: test_rewards_baseline.ipynb  test_rewards_inthinking.ipynb  tmp_dataset_tests.ipynb
verifiers/: __init__.py
verifiers/envs/: __init__.py  bfcl_env.py  bfcl_inthinking_env.py  tool_env.py
verifiers/examples/: bfcl_agent.py  bfcl_inthinking_agent.py
verifiers/parsers/: xml_parser.py
verifiers/prompts/: system_prompts.py
verifiers/rubrics/: __init__.py  bfcl_inthinking_rubric.py  bfcl_rubric.py
verifiers/trainers/: grpo_env_trainer.py
verifiers/utils/: config_utils.py  data_utils.py  logging_utils.py  model_utils.py
