[project]
name = "verifiers"
authors = [
    {name = "William Brown", email = "williambrown97@gmail.com"},
]
version = "0.1.0"
description = "Verifiers for reinforcement learning with LLMs"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "huanzhi-utils",
    "scikit-learn",
    "torch",
    "setuptools",
    "deepspeed==0.16.3",
    "accelerate",
    "peft",
    "wandb",
    "rich",
    "duckduckgo-search",
    "trl @ git+https://github.com/huggingface/trl.git@fc4dae2",
    "liger-kernel>=0.5.2",
    "vllm==0.7.3",
    "brave-search>=0.1.8",
    "loguru",
]

[tool.ruff]
# Add any global Ruff settings here if needed (e.g., exclude, line-length)
# line-length = 88
# target-version = "py311"

[tool.ruff.lint]
# Disable import sorting rules (isort, code 'I')
# If you have other rules selected/ignored, merge 'I' into the ignore list.
# If 'select' is not defined, Ruff uses defaults. Add 'ignore' if it doesn't exist.
ignore = ["I"]
# Add other lint configurations here. For example, to keep default rules + ignore isort:
# select = ["E4", "E7", "E9", "F"] # Default selection
# ignore = ["I"]

# [tool.ruff.format] # Remove this section entirely if you don't want to configure formatting.
# Add any specific formatting rules here if you *do* run `ruff format`
# e.g., quote-style = "single"


